# covid-plz

./: .gitignore  README.md  pyproject.toml
covid_plz/: main.py
tests/: test_covid_plz.py
