[tool.poetry]
name = "covid-plz"
version = "0.1.0"
description = "Get COVID-19 incidence number for given ZIP code."
authors = ["Thorben Jensen <jensen.thorben@posteo.net>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
typer = "^0.3.2"
typer-cli = "^0.0.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
notebook = "^6.4.3"
flake8 = "^3.9.2"
black = {version = "^21.7b0", allow-prereleases = true}
rope = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
